--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: node_js
 node_js:
-- '0.12'
+- 'node'
 script:
 - npm test
 - 'if [ "${TRAVIS_SECURE_ENV_VARS}" = "true" ]; then npm run test-secure; fi'
