--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "frau-publisher": "bin/publishercli"
   },
   "scripts": {
-    "pretest": "npm run lint",
+    "pretest": "",
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha test/*.js -- -R spec",
     "test-secure": "mocha test/secure/*.js",
     "lint": "eslint src && eslint test",
